--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
 <head>
-<title>Blueberries</title>
+  <title>Blueberries</title>
 </head>
-<body>
+   <body>
+      <body style="background-color:LightGray;">
 
-<h1 style="background-color:SteelBlue;" >Welc0me to my website</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <h1 style="background-color:SteelBlue;" >Welc0me to my website</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-</body>
+  </body>
 </html>
