--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <body style="background-color:LightGray;">
 
   <h1 style="background-color:SteelBlue;" >Welc0me to my website</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p style="background-color:LightBlue;" >Blueberries are really nice, you should eat them</p>
 
   </body>
 </html>
