--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <h1 style="background-color:SteelBlue;" >Welc0me to my website</h1>
   <p style="background-color:LightBlue;" >Blueberries are really nice, you should eat them</p>
+        <a href="https://www.kajk03.github.io">Visit Kajk03's website</a>
 
   </body>
 </html>
