--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="UTF-8">
-<head>
-  <title>Blueberries</title>
-</head>
-   <body>
-      <body style="background-color:LightGray;">
+    <head>webpage</head>
+    <body> 
+            <body style="background-color:LightGray;">
 
-  <h1 style="background-color:SteelBlue;" >Welc0me to my website</h1>
-  <p style="background-color:LightBlue;" >Blueberries are really nice, you should eat them</p>
-        <a href="https://www.kajk03.github.io">Visit Kajk03's website</a>
-
-  </body>
+                    <h1 style="color: mediumblue" >Welcome to my website</h1>
+                    <p style="background-color:LightBlue;" >Blueberries are really nice, you should eat them</p>
+                        <br>
+                    <p style="color: purple">Here are a few useful links</p>
+                        <br>
+                    <a href="info.html">Information about this page</a>
+                        <br>
+                    <a style="color:green" href="https://kajk03.github.io/">Visit Kajk03's website</a>
+                        <br>
+                    <a style="color:black" href="https://www.wikipedia.org/">Link to Wikipedia</a>
+                        <br>
+                    <a style="color:darkred" href="https://www.youtube.com/watch?v=fC7oUOUEEi4">Link to Youtube</a>
+                          <br>
+                     <img src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
+        
+    </body>
 </html>
