--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>webpage</head>
+    <head>Blueberries</head>
     <body> 
             <body style="background-color:LightGray;">
 
