--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <br>
                     <a style="color:black" href="https://www.wikipedia.org/">Link to Wikipedia</a>
                         <br>
-                    <a style="color:darkred" href="https://www.youtube.com/watch?v=fC7oUOUEEi4">Link to Youtube</a>
+                    <a style="color:darkred" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to Youtube</a>
                             <br>
                      <img src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
         
