--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <body style="background-color:LightGray;">
 
                     <h1 style="color: mediumblue" >Welcome to my website</h1>
-                        <p style="background-color:LightBlue;" >Blueberries are really nice, you should eat them</p>
+                        <p style="color:LightBlue;" >Blueberries are really nice, you should eat them</p>
                             <br>
                         <p style="color: red">Here are a few useful links</p>
                             <br>
