--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>Information page</head>
+    <head><h1>Information page</h1></head>
         <body style="background-color: lightsteelblue">
            <br>
             <a href="index.html">Back to homepage</a>
