--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link rel="stylesheet" href="style.css">
         <style>
             .myDiv {
                 border: 4px outset darkslategray;
@@ -16,7 +17,7 @@
     <body> 
             <body class="Flex" style="background-color:LightSlateGray;">
 
-                    <h1 style="color: white;background-color: darkslategray;border:4px outset black" >Welcome to my website</h1>
+                    <h1>Welcome to my website</h1>
                         <p style="background-color:LightBlue;" >Blueberries are really nice</p>
                             <br>
                         <p style="color: darkred;background-color: white;border: 2px outset darkslategray">Here are a few useful links</p>
