--- a/info.html
+++ b/info.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head><h1>Information page</h1></head>
-        <body style="background-color: lightsteelblue">
+    <head>
+            <link rel="stylesheet" href="style.css">
+        <h2>Information page</h2>    
+        </head>
+        <body>
            <br>
             <a href="index.html">Back to homepage</a>
                 <br>
