--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
     <html>
-        <head><button style="background-color: grey"><a href=index.html>Back to homepage</a></button></head>
-            <body style="background-color:lightgray">
+        <head><button style="background-color: grey"><a href=index.html>Back to homepage</a></button>
+            <link rel="stylesheet" href="style.css">
+        </head>
+            
+        <body>
                 <h1 style="background-color:lightcoral"><b>Shall I compare thee to a summer's day?</b></h1>
                         
                     <p><em>by William Shakespeare</em></p>
