--- a/page4.html
+++ b/page4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
+            <link rel="stylesheet" href="style.css">
         <button><a href="index.html">Back to homepage</a></button>
             <br>
         <button><a href="info.html">Back to info-page</a></button>
@@ -8,7 +9,7 @@
         <h2 style="background-color: lightslategrey;text-align: center">Curriculum vitae</h2>
         <p><em>(This page will be in swedish)</em></p>
     </head>
-    <body style="background-color: lightsteelblue">
+    <body>
         <img src=https://vignette.wikia.nocookie.net/jaygt/images/4/41/Hidethepainharold.png/revision/latest/scale-to-width-down/340?cb=20190714050339>
         <h4><strong>Erfarenheter</strong></h4>
         <dl>
