--- a/page5.html
+++ b/page5.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link rel="stylesheet" href="style.css">
         <button><a href="index.html">Back to homepage</a></button>
             <br>
         <button><a href="info.html">Back to info-page</a></button>
     </head>
-    <body style="background-color: lightsteelblue">
-        <h1 style="background-color: lightslategrey">Multiplication table</h1>
+    <body>
+        <h1>Multiplication table</h1>
         <table style="width: 40%" border='1' style="border-collapse:collapse;background-color: lightslategrey">
             <tr style="background-color:tomato">
                 <td>1</td>
