--- a/Hitochditresor.html
+++ b/Hitochditresor.html
@@ -21,7 +21,7 @@
                 </nav>
             </header>
             <section class="imagebar">
-                <img src="hitochdit/hitochdit/bilder/plan.png" class="flygplan">
+                <img src="plan.png" class="flygplan">
             </section>
             <h2>Resmålen i vår</h2>
             <section class="resmal">
