--- a/Hitochditresor.html
+++ b/Hitochditresor.html
@@ -9,7 +9,7 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <img src="hitochdit/hitochdit/bilder/logotyp.png">
+                    <img src="logotyp.png">
                 </div>
                 <nav class="meny">
                     <ul>
@@ -25,7 +25,7 @@
             </section>
             <h2>Resmålen i vår</h2>
             <section class="resmal">
-                <img src="hitochdit/hitochdit/bilder/berlin.jpg">
+                <img src="berlin.jpg">
                 <h3>Berlin</h3>
                 <p class="resmal_info">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. 
@@ -34,7 +34,7 @@ Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, v
                 </p>
             </section>
             <section class="resmal">
-                <img src="hitochdit/hitochdit/bilder/paris2.jpg">
+                <img src="paris2.jpg">
                 <h3>Paris</h3>
                 <p class="resmal_info">
                     Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. 
@@ -44,7 +44,7 @@ Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricie
                 </p>
             </section>
             <section class="resmal">
-                <img src="hitochdit/hitochdit/bilder/kopenhamn.jpg">
+                <img src="kopenhamn.jpg">
                 <h3>Köpenhamn</h3>
                 <p class="resmal_info">
                     Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. 
@@ -62,21 +62,21 @@ Sed consequat, leo eget bibendum sodales, augue velit cursus nunc. Maecenas temp
             <section class="inner_footer">
                 <div class="footerbox">
                     <h3>Kontakt</h2>
-                        <img src="hitochdit/hitochdit/bilder/icons/mail.png">HEJ@HITOCHDIT.SE
+                        <img src="mail.png">HEJ@HITOCHDIT.SE
                         <br>
-                        <img src="hitochdit/hitochdit/bilder/icons/phone.png">0705-50 40 32
+                        <img src="phone.png">0705-50 40 32
                         <br>
-                        <img src="hitochdit/hitochdit/bilder/icons/skype.png">HITOCHDIT
+                        <img src="skype.png">HITOCHDIT
                         <br>
 
                 </div>
                 <div class="footerbox">
                     <h3>Följ oss</h2>
-                        <img src="hitochdit/hitochdit/bilder/icons/facebook.png">
-                        <img src="hitochdit/hitochdit/bilder/icons/instagram.png">
-                        <img src="hitochdit/hitochdit/bilder/icons/pintrest.png">
-                        <img src="hitochdit/hitochdit/bilder/icons/twitter.png">
-                        <img src="hitochdit/hitochdit/bilder/icons/youtube.png">
+                        <img src="facebook.png">
+                        <img src="instagram.png">
+                        <img src="pintrest.png">
+                        <img src="twitter.png">
+                        <img src="youtube.png">
                 </div>
                 <div class="footerbox">
                     <h3>Nyhetsbrev</h2>     
