--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
                 position:relative;
             }
         </style>
+        <title>The Sea Monster</title>
     </head>
-    <body> 
-            <body class="Flex" style="background-color:LightSlateGray;">
-
+    <body class="Flex" style="background-color:LightSlateGray;"> 
                     <h1>Welcome to my website</h1>
                         <p style="background-color:LightBlue;" >Blueberries are really nice</p>
                             <br>
