--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
                             <br>
                         <p style="color: darkred;background-color: white;border: 2px outset darkslategray">Here are a few useful links</p>
                             <br>
-                        <button><a href="info.html">Information about this page</a></button>
+                        <a href="info.html">Information about this page</a>
                             <br>
-                        <button><a style="color:orchid" href="page3.html">A Shakespeare poem</a></button>
+                        <a href="page3.html">A Shakespeare poem</a>
                             <br>
-                        <button><a style="color:green" href="https://kajk03.github.io/">Visit Kajk03's website</a></button>
+                        <a href="https://kajk03.github.io/">Visit Kajk03's website</a>
                             <br>
-                        <button><a style="color:tomato" href="https://wilhelm331.github.io/">Visit Wilhelm331's website</a></button>
+                        <a href="https://wilhelm331.github.io/">Visit Wilhelm331's website</a>
                             <br>
                         <div class="myDiv">
-                        <button><a style="color:black" href="https://www.wikipedia.org/">Link to Wikipedia</a></button>
+                        <a href="https://www.wikipedia.org/">Link to Wikipedia</a>
                             <br>
                         <iframe height=300 width=700 src="https://en.wikipedia.org/wiki/Main_Page"></iframe>
                         </div>
                             <br>
                         <div class="myDiv">
-                        <button><a style="color:darkred" href="https://www.youtube.com/">Link to Youtube</a></button>
+                        <a  href="https://www.youtube.com/">Link to Youtube</a>
                             <br>
                         <iframe height=300 width=533 src="https://www.youtube.com/embed/B7UmUX68KtE"></iframe>
                         </div>  
                             <br>
                         <div class="myDiv">
-                                <img style="border:darkslategray" height=500 width=800 src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
+                                <img style="border:darkslategray" alt="Some blueberries" height=500 width=800 src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
                         </div>
                             <br>
                         <h3>A list of things to come on this page</h3>
