--- a/info.html
+++ b/info.html
@@ -2,7 +2,8 @@
 <html>
     <head>
             <link rel="stylesheet" href="style.css">
-        <h2>Information page</h2>    
+        <h2>Information page</h2> 
+        <title>Information page</title>   
         </head>
         <body>
            <br>
