--- a/ps_to_js_3.html
+++ b/ps_to_js_3.html
@@ -1,22 +1,154 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Studsboll
+        </title>
+        <style>
+            * {padding: 0; margin:0;}
+            canvas { background: #eee; display: block; margin: 0 auto;}
+        </style>
+    </head>
+    <body>
+        <canvas id="myCanvas" width="480" height="320"></canvas>
+        <script>
+            var canvas = document.getElementById("myCanvas");
+            var ctx = canvas.getContext("2d");
 
-<h2>Processing to JavaScript</h2>
-<canvas id="Canvas" width="230" height="150" style="border:2px solid black;"></canvas>
-<script>
-var staplar=[45,78,89,95,67,89,23,123,93,129,98];
-var i=0;
-var stap = document.getElementById("Canvas");
-var ctx = stap.getContext("2d"); 
-while (i>20){
-ctx.beginPath();
-i++;
-ctx.rect(i*10, 150, 5, staplar[i]);
-ctx.fill();
-ctx.stroke();
-ctx.closePath();}
-</script>
-</canvas>
-</body>
+            var x = canvas.width/2;
+            var y = canvas.height-30;
+            
+            var dx = 2;
+            var dy = -2;
+
+            var ballRadius = 10;
+
+            var paddleHeight = 10;
+            var paddleWidth = 75;
+            var paddleX = (canvas.width-paddleWidth) / 2;
+
+            var rightPressed = false;
+            var leftPressed = false;    
+
+            var brickRowCount = 3;
+            var brickColumnCount = 5;
+            var brickWidth = 75;
+            var brickHeight = 20;
+            var brickPadding = 10;
+            var brickOffsetTop = 30;
+            var brickOffsetLeft = 30;
+
+            var bricks = [];
+                for(var c=0; c<brickColumnCount; c++) {
+                    bricks[c] = [];
+                    for(var r=0; r<brickRowCount; r++) {
+                        bricks[c][r] = { x: 0, y: 0, status: 1 };
+                    }
+                }
+
+            var lives = 1;
+
+            function drawBall() {
+                ctx.beginPath();
+                ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+                ctx.fillStyle = "#336666";
+                ctx.fill();
+                ctx.closePath();
+            }
+
+            function drawPaddle() {
+                ctx.beginPath();
+                ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+                ctx.fillStyle = "#336666";
+                ctx.fill();
+                ctx.closePath();
+            }
+            function draw() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                drawBall();
+                drawPaddle();
+                collisionDetection();
+                x += dx;
+                y += dy;
+                if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+                    dx = -dx;
+                }
+
+                if(y + dy < ballRadius) {
+                    dy = -dy;
+                } else if(y + dy > canvas.height-ballRadius) {
+                    if(x > paddleX && x < paddleX + paddleWidth) {
+                        dy = -dy;
+                    }
+                    else {
+                        lives--;
+                        if(!lives) {
+                            alert("GAME OVER");
+                            document.location.reload();
+                        }
+                    else {
+                        x = canvas.width/2;
+                        y = canvas.height-30;
+                        dx = 2;
+                        dy = -2;
+                        paddleX = (canvas.width-paddleWidth)/2;
+                    }
+                    }
+                }
+                if(rightPressed) {
+                    paddleX += 7;
+                    if (paddleX + paddleWidth > canvas.width){
+                        paddleX = canvas.width - paddleWidth;
+                    }
+                }
+                else if(leftPressed) {
+                    paddleX -= 7;
+                    if (paddleX < 0){
+                        paddleX = 0;
+                    }
+                }
+                requestAnimationFrame(draw);
+            }
+            draw();
+                document.addEventListener("keydown", keyDownHandler, false);
+                document.addEventListener("keyup", keyUpHandler, false);
+
+                function keyDownHandler(e) {
+                    if(e.key == "Right" || e.key == "ArrowRight") {
+                        rightPressed = true;
+                    }
+                    else if(e.key == "Left" || e.key == "ArrowLeft") {
+                        leftPressed = true;
+                    }
+                }
+
+                function keyUpHandler(e) {
+                    if(e.key == "Right" || e.key == "ArrowRight") {
+                        rightPressed = false;
+                    }
+                    else if(e.key == "Left" || e.key == "ArrowLeft") {
+                        leftPressed = false;
+                    }
+                }
+
+                function collisionDetection() {
+                    for(var c=0; c<brickColumnCount; c++) {
+                        for(var r=0; r<brickRowCount; r++) {
+                            var b = bricks[c][r];
+                            if(b.status == 1) {
+                                if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+                                    dy = -dy;
+                                    b.status = 0;
+                                    score++;
+                                    if(score == brickRowCount*brickColumnCount) {
+                                        alert("YOU WIN, CONGRATULATIONS!");
+                                        document.location.reload();
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+        </script>
+    </body>
 </html>
