--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
             <link rel="stylesheet" href="style.css">
+            <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.=">
         <style>
             .myDiv {
                 border: 4px outset darkslategray;
@@ -9,13 +10,10 @@
                 background-color:lightseagreen;
                 text-align: center;
             }
-            .Flex {
-                position:relative;
-            }
         </style>
         <title>The Sea Monster</title>
     </head>
-    <body class="Flex" style="background-color:LightSlateGray;"> 
+    <body style="background-color:LightSlateGray;"> 
                     <h1>Welcome to my website</h1>
                         <p style="background-color:LightBlue;" >Blueberries are really nice</p>
                             <br>
@@ -32,17 +30,17 @@
                         <div class="myDiv">
                         <a href="https://www.wikipedia.org/">Link to Wikipedia</a>
                             <br>
-                        <iframe height=300 width=700 src="https://en.wikipedia.org/wiki/Main_Page"></iframe>
+                        <iframe height=80% width=75% src="https://en.wikipedia.org/wiki/Main_Page"></iframe>
                         </div>
                             <br>
                         <div class="myDiv">
                         <a  href="https://www.youtube.com/">Link to Youtube</a>
                             <br>
-                        <iframe height=300 width=533 src="https://www.youtube.com/embed/B7UmUX68KtE"></iframe>
+                        <iframe height=45% width=80% src="https://www.youtube.com/embed/B7UmUX68KtE"></iframe>
                         </div>  
                             <br>
                         <div class="myDiv">
-                                <img style="border:darkslategray" alt="Some blueberries" height=500 width=800 src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
+                                <img style="border:darkslategray" alt="Some blueberries" height=50% width=80% src="https://image.sciencenordic.com/1446359.jpg?imageId=1446359&width=480&height=274"/>
                         </div>
                             <br>
                         <h3>A list of things to come on this page</h3>
